--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven {url "https://maven.aliyun.com/repository/google"}
         maven { url "https://jitpack.io" }
         google()
     }
